<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

</LinearLayout>