<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.add.AddFragment"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:id="@+id/addFragment">

    <TextView
        android:id="@+id/tv_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_your_farm"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/weight_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/age_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="3" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ic_date_button"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/due_date"
            android:src="@drawable/ic_date"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/tv_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="32dp"/>


</LinearLayout>