<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.onboarding.OnBoardingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_welcome"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/the_farmer"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash_ilc"
            tools:ignore="ImageContrastCheck"
            android:layout_marginBottom="48dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/next"
            android:background="@drawable/button_rounded"
            android:layout_marginHorizontal="32dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>