<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddInventoryFragment"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="48dp">

    <TextView
        android:id="@+id/tv_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_your_inventory"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="top"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="32dp"/>

</LinearLayout>