<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.home.HomeFragment"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:id="@+id/homeFragment">

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_location"
                app:tint="#001e1d"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/location_dummy"
                android:textColor="#001e1d"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_more"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_weather"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginVertical="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:layout_editor_absoluteX="16dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_card"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees"
                android:textColor="#001e1d"
                android:textSize="24sp"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudy"
                android:textColor="#001e1d"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <!--            humidity-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="160dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="#001e1d"
                        android:textSize="14sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/good"
                        android:textColor="#006400"
                        android:textSize="14sp" />
                </LinearLayout>
                <!--                Precipitation-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precipitation"
                        android:textColor="#001e1d"
                        android:textSize="14sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/low"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/manage_your_fields"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/card_weather" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_my_farm"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_card"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                android:src="@drawable/farm"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_farm"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_animals"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green50"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                android:src="@drawable/animals"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/animals"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_inventory"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_my_farm"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                android:src="@drawable/warehouse"
                tools:ignore="ContentDescription"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_balance"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green50"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_animals">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                android:src="@drawable/money"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/balance"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>